<resources>
    <string name="app_name">这不是微博</string>

    <string-array name="smile_tab">
        <item>[爱你]</item>
        <item>[icon2]</item>
    </string-array>
    <string-array name="default_smiley_texts">
        <item>[爱你]</item>
        <item>[机器人]</item>
        <item>[拜拜]</item>
        <item>[抱抱]</item>
        <item>[悲剧]</item>
        <item>[悲伤]</item>
        <item>[便便]</item>
        <item>[鄙视]</item>
        <item>[闭嘴]</item>
        <item>[不要]</item>
        <item>[馋嘴]</item>
    </string-array>
    <string-array name="default_smiley_icon">
        <item>[icon2]</item>
        <item>[icon7]</item>
        <item>[icon10]</item>
        <item>[icon12]</item>
        <item>[icon13]</item>
        <item>[icon18]</item>
        <item>[icon19]</item>
        <item>[icon20]</item>
        <item>[icon21]</item>
        <item>[icon22]</item>
        <item>[icon24]</item>
        <item>[icon27]</item>
        <item>[icon29]</item>
        <item>[icon30]</item>
        <item>[icon35]</item>
        <item>[icon40]</item>
    </string-array>

    <string name="home">首页</string>
    <string name="recreation">娱乐</string>
    <string name="subscribe">订阅</string>
    <string name="mine">我的</string>
    <string name="find">发现</string>
    <string name="login_tips">登陆领福利,订阅主播,开播当万人迷</string>
    <string name="login_now">立即登录</string>
    <string name="account_password_login">账号密码登陆</string>
    <string name="account">手机号/虎牙号/通行证/邮箱</string>
    <string name="password">密码</string>
    <string name="login">登陆</string>
    <string name="Vcode_login">验证码登陆</string>
    <string name="forget_password">忘记密码?</string>
    <string name="third_login">第三方登录</string>
    <string name="personal_information">个人信息</string>
    <string name="exit_login">退出登录</string>
    <string name="head">头像</string>
    <string name="nickname">昵称</string>
    <string name="huyanumber">虎牙号</string>
    <string name="sex">性别</string>
    <string name="man">男</string>
    <string name="age">年龄</string>
    <string name="address">地区</string>
    <string name="signature">签名</string>
    <string name="please_write">请输入</string>
    <string name="grade">等级</string>
    <string name="video_management">视频管理</string>
    <string name="drafts">草稿箱</string>
    <string name="binding_phone">修改/绑定手机</string>
    <string name="page_setting">设置页(待完成)</string>

</resources>
