<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/ic_x"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_login_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/account_password_login"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_close" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:hint="@string/account"
        app:layout_constraintTop_toBottomOf="@id/tv_login_tips" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/et_account" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/shape_btn_login"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/login"
        android:textColor="@color/color_txt_white"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/et_password" />

    <TextView
        android:id="@+id/tv_vcode_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/Vcode_login"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/forget_password"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="@id/tv_login"
        app:layout_constraintTop_toBottomOf="@id/tv_login" />

    <TextView
        android:id="@+id/tv_third_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/third_login"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vcode_login" />

    <View
        android:layout_width="50dp"
        android:layout_height="1px"
        android:layout_marginTop="16dp"
        android:layout_marginRight="20dp"
        android:background="@color/color_txt_gray"
        app:layout_constraintRight_toLeftOf="@id/tv_third_login"
        app:layout_constraintTop_toBottomOf="@id/tv_vcode_login" />

    <View
        android:layout_width="50dp"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="16dp"
        android:background="@color/color_txt_gray"
        app:layout_constraintLeft_toRightOf="@id/tv_third_login"
        app:layout_constraintTop_toBottomOf="@id/tv_vcode_login" />

    <ImageView
        android:id="@+id/iv_yy"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_yy"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/iv_wechat"
        app:layout_constraintTop_toBottomOf="@id/tv_third_login" />

    <ImageView
        android:id="@+id/iv_wechat"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_wechat"
        app:layout_constraintLeft_toRightOf="@id/iv_yy"
        app:layout_constraintRight_toLeftOf="@id/iv_qq"
        app:layout_constraintTop_toBottomOf="@id/tv_third_login" />

    <ImageView
        android:id="@+id/iv_qq"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_qq"
        app:layout_constraintLeft_toRightOf="@id/iv_wechat"
        app:layout_constraintRight_toLeftOf="@id/iv_sina"
        app:layout_constraintTop_toBottomOf="@id/tv_third_login" />

    <ImageView
        android:id="@+id/iv_sina"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/ic_sina_microblog"
        app:layout_constraintLeft_toRightOf="@id/iv_qq"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_third_login" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <RadioButton
            android:id="@+id/radiobtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/txt_tips"
            app:layout_constraintTop_toTopOf="@id/txt_tips"/>

        <TextView
            android:id="@+id/txt_tips"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:maxLines="3"
            android:text="用户协议"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>